improve bucket api
